--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>icons/person.png</file>
+        <file>ContactItem.qml</file>
     </qresource>
 </RCC>
